<!--
  Copyright 2013 Karlsruhe Institute of Technology. This Work has been partially supported by the EIT ICT Labs funded research project Towards a Mobile Cloud (activity CLD 12206).
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Context Framework</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="axis_x">X-Axis:</string>
    <string name="axis_y">Y-Axis:</string>
    <string name="axis_z">Z-Axis:</string>
    <string name="button_train_classifier">Train with recorded data.</string>
    <string name="button_evaluation">Evaluate with Weka</string>
    <string name="textview_activies">Select Current Activity (training/testing)</string>
    <string name="button_start_recording">Start Recording</string>
    <string name="button_stop_recording">Stop Recording</string>
    <string name="button_train_file">Train with ARFF file</string>
    <string name="button_start_classifying">Start classifying current data</string>
    <string name="button_stop_classifying">Stop classifying current data</string><string name="title_activity_framework_control">FrameworkControl</string>
    <string name="button_logging_start">Start Logging</string>
    <string name="button_logging_stop">Stop Logging</string>
    <string name="checkbox_toggle_prediction">Train Prediction</string>
    

</resources>
